// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components - LazyHTML render should render a loading indicator before html is loaded 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<h1>LOADING</h1>",
    }
  }
/>
`

exports[`components - LazyHTML render should render correctly 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "test-html",
    }
  }
/>
`
